[package]
name = "crowbar-a2s"
description = "Rust implementation of Source A2S query"
version = "0.6.0"
license = "MIT"
repository = "https://github.com/Rosmeowtis/crowbar-a2s"
authors = [
    "rumblefrog <contact@rumblefrog.me>",
    "Rosmeowtis <rosmeowtis@outlook.com>",
]
edition = "2021"
keywords = ["steam", "query"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
bzip2 = "0.5"
crc = "1"
thiserror = "2"

[dev-dependencies]
futures = "0.3"

[dependencies.tokio]
version = "1"
features = ["net", "time"]
optional = true

[dev-dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[features]
default = ["sync"]
serialization = ["serde"]
sync = []
async = ["tokio"]
