[package]
name = "crowbar-a2s"
description = "Rust implementation of Source A2S query"
version = "0.6.0"
license = "MIT"
repository = "https://github.com/Rosmeowtis/crowbar-a2s"
maintainers = ["Rosmeowtis <rosmeowtis@outlook.com>"]
authors = [
    "Rosmeowtis <rosmeowtis@outlook.com>", # fork author
    "rumblefrog <contact@rumblefrog.me>", # original author
]
edition = "2021"
keywords = ["steam", "query"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[badges]
maintainance = { status = "passively-maintained" }

[dependencies]
byteorder = "1"
bzip2 = "0.5"
crc = "3"
thiserror = "2"

[dev-dependencies]
futures = "0.3"

[dependencies.tokio]
version = "1"
features = ["net", "time"]
optional = true

[dev-dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[features]
default = ["sync"]
serialization = ["serde"]
sync = []
async = ["tokio"]
